<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="app_name">MovieTime</string>
    <string name="action_settings">Settings</string>
    <string name="movie_rating_step" translatable="false">0.1</string>

    <!-- Preferences specific -->
    <string name="pref_sort_key" translatable="false">sort</string>
    <string name="pref_sort_title">Sort order</string>
    <string name="pref_conn_status_key" translatable="false">connection_status</string>
    <string name="pref_sort_popularity" translatable="false">popularity.desc</string>
    <string name="pref_sort_rating" translatable="false">vote_average.desc</string>
    <string name="pref_sort_favourite" translatable="false">favourites</string>
    <string name="pref_sort_popularity_title">Most popular</string>
    <string name="pref_sort_rating_title">Highest rated</string>
    <string name="pref_sort_favourite_title">Favourites</string>
    <!-- Default sort order -->
    <string name="pref_default_sort_order_value">@string/pref_sort_popularity</string>

    <!-- SyncAdapter related -->
    <string name="sync_account_type" translatable="false">movies.saeed.io</string>
    <string name="content_authority" translatable="false">io.saeed.android.movies.app</string>

    <string name="fully_fetched_data" translatable="false">fully_fetched</string>

    <!-- Empty view -->
    <string name="empty_movie_list">Movies not available</string>
    <string name="empty_movie_list_server_down">Movies not available. Server is down.</string>
    <string name="empty_movie_list_list_server_error">Movies not available. Server error.</string>
    <string name="empty_movie_list_connection_unknown">Movies not available. Unknown error.</string>
    <string name="empty_movie_list_no_network">Movies not available. No network.</string>
    <string name="empty_movie_list_not_found">No movies found.</string>
    <string name="empty_movie_list_syncing">Movies are syncing...</string>

    <string name="movie_detail_title">Movie detail</string>
    <string name="search_hint">Type movie title</string>

    <!-- Rating text string -->
    <string name="movie_rating_number"><xliff:g id="movie_voted_avg">%1$s/10.0</xliff:g></string>

    <!-- Share -->
    <string name="action_share">Share</string>
    <string name="movie_share_string">Check this out
        <xliff:g id="movie_url">%1$s</xliff:g>
         <xliff:g id="movie_share_hashtag">%2$s</xliff:g>
    </string>

    <!-- Movie favorites -->
    <string name="action_favourite">Favorite</string>
    <string name="favorites_add">Add to favorites</string>
    <string name="favorites_remove">Remove from favorites</string>
    <string name="favorites_added">Added to favorites!</string>
    <string name="favorites_removed">Removed from favorites!</string>

    <!-- Trailers -->
    <string name="movie_trailers_header">Trailers:</string>
    <string name="movie_review_title">Reviews:</string>

    <!-- Reviews -->
    <string name="movie_review_author">A movie review by <xliff:g id="author">%1$s</xliff:g></string>
    <string name="empty_trailers_list">No trailers available.</string>
    <string name="empty_reviews_list">No reviews available.</string>
    <string name="movie_release_date_description">Release date</string>
</resources>
